vpc.tf
provider "aws" {
    region = "ap-southeast-1"
    access_key = "AKIARSSWGWYCG63RAT6E"
    secret_key = "57XLIG1kx1/b8Wkc7kSTMaulkbivxy4EcthL4cwV"
      
}

// Creating VPC using private ip ranges
resource "aws_vpc" "sample-vpc-01" {
    cidr_block = "192.168.0.0/24"  // Using a private ip range of home networks since it is a small network
    tags = {
      "Name" = "sample-vpc-01"
      "Creator" = "TF-user"
    }
  
}

// Creatin internet gateway for our vpc
resource "aws_internet_gateway" "sample-igw-1" {
    vpc_id = aws_vpc.sample-vpc-01.id
    tags = {
      "Name" = "sample-igw-1"
      "Creator" = "TF-user"
    }
  
}

// Creating subnets
// First public subnet in us-west-2a availability zone
resource "aws_subnet" "public-sub-1" {
    vpc_id = aws_vpc.sample-vpc-01.id
    cidr_block = "192.168.0.0/27"
    availability_zone = "ap-southeast-1a"
    tags = {
      "Name" = "public-sub-1"
      "Creator" = "TF-user"
    }
  
}

// First private subnet in us-west-2a availability zone
resource "aws_subnet" "private-sub-1" {
    vpc_id = aws_vpc.sample-vpc-01.id
    cidr_block = "192.168.0.32/27"
    availability_zone = "ap-southeast-1a"
    tags = {
      "Name" = "private-sub-1"
      "Creator" = "TF-user"
    }
  
}

// Second public subnet in us-west-2b availability zone
resource "aws_subnet" "public-sub-2" {
    vpc_id = aws_vpc.sample-vpc-01.id
    cidr_block = "192.168.0.64/27"
    availability_zone = "ap-southeast-1b"
    tags = {
      "Name" = "public-sub-2"
      "Creator" = "TF-user"
    }
  
}


// Second private subnet in us-west-2b availability zone
resource "aws_subnet" "private-sub-2" {
    vpc_id = aws_vpc.sample-vpc-01.id
    cidr_block = "192.168.0.96/27"
    availability_zone = "ap-southeast-1b"
    tags = {
      "Name" = "private-sub-2"
      "Creator" = "TF-user"
    }
  
}

/*//Creating elastic ips for NAT gateways
resource "aws_eip" "nat-eip-1" {
    vpc = true
    depends_on = [
      aws_internet_gateway.sample-igw-1
    ]
  
}*/

// Creating elastic ip for NAT gateway
resource "aws_eip" "nat-eip-2" {
    vpc = true
    depends_on = [
      aws_internet_gateway.sample-igw-1
    ]
    tags = {
      "Name" = "nat-eip-2"
      "Creator" = "TF-user"
    }
  
}

/*// Creating NAT gateway in private subnet 1.  
resource "aws_nat_gateway" "nat-prv-sub-1" {
    subnet_id = aws_subnet.private-sub-1.id
    connectivity_type = "public"
    allocation_id = aws_eip.nat-eip-1.id
    tags = {
      "Name" = "nat-prv-sub-1"
      "Creator" = "TFuser"
    }
  
}*/

/* Note NAT gateways should not be sitting in the Private subnet because of security reasons.
   Gateways should be sitting outside the private subnet so that if hacker find the ip if NAT gateways they
   wont be able to figure out the private subnet devices.*/

// Creating NAT gateway in public subnet 2.
resource "aws_nat_gateway" "nat-pub-sub-2" {
    subnet_id = aws_subnet.public-sub-2.id
    connectivity_type = "public"
    allocation_id = aws_eip.nat-eip-2.id
    tags = {
      "Name" = "nat-pub-sub-2"
      "Creator" = "TFuser"
    }
  
}

//Creating custom route tables for private subnets
resource "aws_route_table" "prv-rt-1" {
    vpc_id = aws_vpc.sample-vpc-01.id

    route {
      cidr_block = "0.0.0.0/0"
      nat_gateway_id = aws_nat_gateway.nat-pub-sub-2.id
    } 

    tags = {
      "Name" = "prv-rt-1"
      "Creator" = "TF-user"
    }

  
}

// Associating the above route table to the private subnet 1
resource "aws_route_table_association" "rt-a-prv-sub-1" {
    subnet_id = aws_subnet.private-sub-1.id
    route_table_id = aws_route_table.prv-rt-1.id

}

// Associating the above route table to the private subnet 2
resource "aws_route_table_association" "rt-a-prv-sub-2" {
    subnet_id = aws_subnet.private-sub-2.id
    route_table_id = aws_route_table.prv-rt-1.id
  
}

//creating the public route table for the public subnets

resource "aws_route_table" "pub-rt-1" {
    vpc_id = aws_vpc.sample-vpc-01.id

    route {
      cidr_block = "0.0.0.0/0"
      gateway_id = aws_internet_gateway.sample-igw-1.id
    } 

    tags = {
      "Name" = "pub-rt-1"
      "Creator" = "TF-user"
    }
  
}

//associating public route table to public subnets
resource "aws_route_table_association" "rt-a-pub-sub-1" {
    subnet_id = aws_subnet.public-sub-1.id
    route_table_id = aws_route_table.pub-rt-1.id
  
}

resource "aws_route_table_association" "rt-a-pub-sub-2" {
    subnet_id = aws_subnet.public-sub-2.id
    route_table_id = aws_route_table.pub-rt-1.id
  
}
